TestSuite/errors/err0291.pas
begin
  var a: byte;
  var c := a is integer(var s);
end.